# byr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: docker-image.yml
assets/: logo.ai
byr/: bot.py  login.py
byr/client/: qbittorrent.py
